--- a/index.css
+++ b/index.css
@@ -5,10 +5,13 @@
 }
 /* 在线链接服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
-  font-family: 'iconfont';  /* Project id 4387895 */
-  src: url('//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.woff2?t=1703510795571') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.woff?t=1703510795571') format('woff'),
-       url('//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.ttf?t=1703510795571') format('truetype');
+  font-family: "iconfont"; /* Project id 4387895 */
+  src: url("//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.woff2?t=1703510795571")
+      format("woff2"),
+    url("//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.woff?t=1703510795571")
+      format("woff"),
+    url("//at.alicdn.com/t/c/font_4387895_uco9ygizj1m.ttf?t=1703510795571")
+      format("truetype");
 }
 li {
   list-style: none;
@@ -21,10 +24,10 @@ body {
 .word {
   font-size: 28px;
   text-align: center;
-  color:gold;
+  color: gold;
   padding-top: 50px;
   letter-spacing: 5px;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   text-shadow: 2px 4px 9px rgba(255, 255, 255, 0.7);
 }
 .blessing {
@@ -36,7 +39,7 @@ body {
   text-indent: 1em;
   width: 80%;
   font-weight: 400;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   text-shadow: 2px 4px 9px rgba(255, 255, 255, 0.7);
   font-size: 24px;
 }
@@ -57,8 +60,8 @@ body {
   z-index: 1000;
   left: 50%;
   transform: translateX(-50%);
-  animation:starlight 0.4s linear infinite alternate;
-}  
+  animation: starlight 0.4s linear infinite alternate;
+}
 .star-in {
   position: absolute;
   left: 50%;
@@ -66,16 +69,16 @@ body {
   border-right: 100px solid transparent;
   border-bottom: 70px solid gold;
   border-left: 100px solid transparent;
-  transform: translateX(-50%) translateY(-50%) rotate(35deg) scale(0.14)
+  transform: translateX(-50%) translateY(-50%) rotate(35deg) scale(0.14);
 }
 .star-in::before {
   border-bottom: 80px solid gold;
   border-left: 30px solid transparent;
   border-right: 30px solid transparent;
   position: absolute;
-  top:-45px;
+  top: -45px;
   left: -65px;
-  content: '';
+  content: "";
   transform: rotate(-35deg);
 }
 .star-in::after {
@@ -83,44 +86,55 @@ body {
   border-left: 100px solid transparent;
   border-right: 100px solid transparent;
   position: absolute;
-  top:-3px;
+  top: -3px;
   left: -105px;
-  content: '';
+  content: "";
   transform: rotate(-70deg);
 }
 @keyframes starlight {
   0% {
-    background: radial-gradient(ellipse at center, gold 0%,
-    rgba(255, 240, 158, 0.5) 42%,
-    rgba(255, 242, 173, 0.2) 58%,
-    rgba(255, 255, 255, 0.1) 100%);
+    background: radial-gradient(
+      ellipse at center,
+      gold 0%,
+      rgba(255, 240, 158, 0.5) 42%,
+      rgba(255, 242, 173, 0.2) 58%,
+      rgba(255, 255, 255, 0.1) 100%
+    );
   }
   25% {
-    background: radial-gradient(ellipse at center, gold 0%,
-    rgba(255, 240, 158, 0.5) 40%,
-    rgba(255, 242, 173, 0.2) 60%,
-    rgba(255, 255, 255, 0.1) 100%
+    background: radial-gradient(
+      ellipse at center,
+      gold 0%,
+      rgba(255, 240, 158, 0.5) 40%,
+      rgba(255, 242, 173, 0.2) 60%,
+      rgba(255, 255, 255, 0.1) 100%
     );
   }
   50% {
-    background: radial-gradient(ellipse at center, gold 0%,
-    rgba(255, 240, 158, 0.5) 38%,
-    rgba(255, 242, 173, 0.2) 62%,
-    rgba(255, 255, 255, 0.1) 100%
+    background: radial-gradient(
+      ellipse at center,
+      gold 0%,
+      rgba(255, 240, 158, 0.5) 38%,
+      rgba(255, 242, 173, 0.2) 62%,
+      rgba(255, 255, 255, 0.1) 100%
     );
   }
   75% {
-    background: radial-gradient(ellipse at center, gold 0%,
-    rgba(255, 240, 158, 0.5) 36%,
-    rgba(255, 242, 173, 0.2) 64%,
-    rgba(255, 255, 255, 0.1) 100%
+    background: radial-gradient(
+      ellipse at center,
+      gold 0%,
+      rgba(255, 240, 158, 0.5) 36%,
+      rgba(255, 242, 173, 0.2) 64%,
+      rgba(255, 255, 255, 0.1) 100%
     );
   }
   100% {
-    background: radial-gradient(ellipse at center, gold 0%,
-    rgba(255, 240, 158, 0.5) 34%,
-    rgba(255, 242, 173, 0.2) 66%,
-    rgba(255, 255, 255, 0.1) 100%
+    background: radial-gradient(
+      ellipse at center,
+      gold 0%,
+      rgba(255, 240, 158, 0.5) 34%,
+      rgba(255, 242, 173, 0.2) 66%,
+      rgba(255, 255, 255, 0.1) 100%
     );
   }
 }
@@ -135,7 +149,7 @@ body {
   height: 60px;
   border-radius: 0 10px 35px 10px;
   transform: rotate(45deg);
-  box-shadow:2px 7px 2px rgba(43, 43, 43, 0.2);
+  box-shadow: 2px 7px 2px rgba(43, 43, 43, 0.2);
 }
 .edge {
   position: absolute;
@@ -151,7 +165,7 @@ body {
   position: absolute;
   left: unset;
   bottom: unset;
-  top:0;
+  top: 0;
   right: 0;
   background-color: rgb(14, 110, 14);
   width: 25px;
@@ -162,7 +176,7 @@ body {
 .leaf:nth-child(even) {
   background-color: #0f880f;
 }
-.leaf:nth-child(even) .edge{
+.leaf:nth-child(even) .edge {
   background-color: #0f880f;
 }
 .leaf:nth-child(1) {
@@ -199,13 +213,13 @@ body {
   bottom: 0px;
   z-index: 1;
   box-shadow: 0 0 10px 5px;
-  background: linear-gradient(0deg,#6d411b 0%,#5a341d 64% );
+  background: linear-gradient(0deg, #6d411b 0%, #5a341d 64%);
 }
 .ball {
   width: 20px;
   height: 20px;
   background-color: #f00;
-  box-shadow: -1px -1px 6px inset #600,1px 1px 8px inset #ffc9c9;
+  box-shadow: -1px -1px 6px inset #600, 1px 1px 8px inset #ffc9c9;
   border-radius: 50%;
   z-index: 101;
   position: absolute;
@@ -246,18 +260,22 @@ body {
   left: 10%;
   top: 62%;
 }
-.b4,.b5,.b6{
+.b4,
+.b5,
+.b6 {
   background-color: #ececec;
-  box-shadow: -1px -1px 6px inset #615f5f,1px 1px 8px inset #fff;
+  box-shadow: -1px -1px 6px inset #615f5f, 1px 1px 8px inset #fff;
 }
-.b7,.b8,.b9 {
+.b7,
+.b8,
+.b9 {
   background-color: gold;
-  box-shadow: -1px -1px 6px inset #3a3101,1px 1px 8px inset #fff;
-
+  box-shadow: -1px -1px 6px inset #3a3101, 1px 1px 8px inset #fff;
 }
-.iconfont{
-  font-family:"iconfont" !important;
-  font-size:16px;font-style:normal;
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
@@ -274,7 +292,8 @@ body {
 }
 
 @keyframes lights {
-  0%,100% {
+  0%,
+  100% {
     transform: scale(1);
   }
   50% {
@@ -305,7 +324,7 @@ body {
   top: 13%;
   font-size: 16px;
 }
-.blink div{
+.blink div {
   width: 3px;
   height: 3px;
   background: #fff;
@@ -356,7 +375,7 @@ body {
   top: 76%;
   transform: scale(1.5);
 }
-.snow div{
+.snow div {
   width: 4px;
   height: 4px;
   background: #fff;
@@ -364,75 +383,69 @@ body {
   z-index: 90;
   position: absolute;
   border-radius: 50%;
-  animation: snow 3s linear infinite  backwards;
+  animation: snow 3s linear infinite backwards;
 }
-.snow div:nth-child(1){
+.snow div:nth-child(1) {
   margin-left: 2%;
   margin-top: -5%;
   animation: snow 3s 6s linear infinite backwards;
 }
-.snow div:nth-child(2){
+.snow div:nth-child(2) {
   margin-left: 24%;
   margin-top: -24%;
   animation: snow 3s 2s linear infinite backwards;
 }
-.snow div:nth-child(3){
+.snow div:nth-child(3) {
   margin-left: 36%;
   margin-top: -2%;
   animation: snow 4s 2s linear infinite backwards;
 }
-.snow div:nth-child(4){
+.snow div:nth-child(4) {
   margin-left: 58%;
   margin-top: -6%;
   animation: snow 3s 1s linear infinite backwards;
 }
-.snow div:nth-child(5){
+.snow div:nth-child(5) {
   margin-left: 68%;
   margin-top: -11%;
   animation: snow 3s 5s linear infinite backwards;
 }
-.snow div:nth-child(6){
+.snow div:nth-child(6) {
   margin-left: 72%;
   margin-top: -19%;
-
 }
-.snow div:nth-child(7){
+.snow div:nth-child(7) {
   margin-left: 81%;
   margin-top: -4%;
-
 }
-.snow div:nth-child(8){
+.snow div:nth-child(8) {
   margin-left: 12%;
   margin-top: -12%;
-  animation: snow 2s 4s linear infinite  backwards;
+  animation: snow 2s 4s linear infinite backwards;
 }
-.snow div:nth-child(9){
+.snow div:nth-child(9) {
   margin-left: 17%;
   margin-top: -5%;
-  animation: snow 4s  linear infinite  backwards;
+  animation: snow 4s linear infinite backwards;
 }
-.snow div:nth-child(10){
+.snow div:nth-child(10) {
   margin-left: 17%;
   margin-top: -1%;
-  animation: snow 4s 1s linear infinite  backwards;
+  animation: snow 4s 1s linear infinite backwards;
 }
-.snow div:nth-child(11){
+.snow div:nth-child(11) {
   margin-left: 17%;
   margin-top: -2%;
-  animation: snow 4s 1s linear infinite  backwards;
+  animation: snow 4s 1s linear infinite backwards;
 }
 .music {
-  position: absolute;
-  opacity: 0.3;
-  bottom: 0;
-  right: 0;
+  display: none; /* Completely hide the audio element */
 }
 @keyframes snow {
   0% {
-    transform:translateY(0);
+    transform: translateY(0);
   }
   100% {
     transform: translateY(100vh);
   }
 }
-
