--- a/index.css
+++ b/index.css
@@ -439,7 +439,15 @@ body {
   animation: snow 4s 1s linear infinite backwards;
 }
 .music {
-  display: none; /* Completely hide the audio element */
+  position: absolute;
+  opacity: 0.3; /* Adjust opacity to your preference */
+  bottom: 0;
+  right: 0;
+  z-index: 1000; /* Make sure the player is above other elements */
+}
+
+audio {
+  width: 300px; /* Adjust the width of the audio player */
 }
 
 @keyframes snow {
