--- a/index.css
+++ b/index.css
@@ -439,11 +439,7 @@ body {
   animation: snow 4s 1s linear infinite backwards;
 }
 .music {
-  position: absolute;
-  opacity: 0.3; /* Adjust opacity to your preference */
-  bottom: 0;
-  right: 0;
-  z-index: 1000; /* Make sure the player is above other elements */
+  display: none; /* Hide the audio element */
 }
 
 audio {
